# IFTEval

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/: README.md  upload_to_hf_hub.py
evaluation/: __init__.py  base_evaluator.py  bertscore_evaluator.py  custom_evaluator.py  rewardmodel_evaluator.py  sbertscore_evaluator.py  standard_evaluator.py
model_training/: finetune.py  offline_generate.py
scripts/: __init__.py  generate_data_mix.py  wrapper.py
scripts/configs/: summary_oriented_mix.yml
scripts/mix_generation/: fractial_mix_generation.py  fractial_mix_generation_extra.py  global_test_set.py
scripts/result_aggregation/: results_exp0_sum.py  results_exp1a_cross.py  results_exp1b_standard_datasets.py  results_exp1b_standard_datasets_all.py  results_exp1b_standard_datasets_neg.py  results_exp1b_synstheticsst2_llama_datasets.py  results_exp2_ins_diversity.py  results_exp3_scaling.py  results_exp4_ift_noift.py  results_exp4_llama_alpaca.py  results_viz.ipynb
templates/: alpaca.json  alpaca_short.json
utils/: prompter.py
